switching to scala 2 with spark as it is really pointless using scala 3 with spark